--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
   <header>
-     <h1>Мій сайт</h1>
+     <div class="fire1">
+        <video src="1343.mp4" type="video/mp4" autoplay muted loop></video>
+     <h1>Мій сайт</h1></div>
   </header>
    <nav>
       <h2> Меню </h2>
-      <a href="#" class="mybutton">Button</a>  
-      <a href="#" class="mybutton">Button</a>  
-      <a href="#" class="mybutton">Button</a>  
-      <a href="#" class="mybutton">Button</a>  
+      <a href="https://dragongold2002.github.io/Index/" class="mybutton">Quest</a>  
+      <a href="https://dragongold2002.github.io/Apple/" class="mybutton">Aplle</a>  
+      <a href="https://dragongold2002.github.io/Dragon-element/" class="mybutton">Dragon-element</a>  
+      <a href="https://dragongold2002.github.io/Site/" class="mybutton">Gausa</a>  
       <a href="#" class="mybutton">Button</a>  
    </nav>
    <main>
@@ -26,13 +28,18 @@
          <article>lower ork2 krjvjeoel kekckekc </article>
       </section>  
       <section>
-         <iframe width="100%" height="480" src="https://m.youtube.com/watch?v=EFmxPMdBqmU"></iframe>
+         <iframe width="100%" height="480" <iframe width="880" height="495" src="https://www.youtube.com/embed/EFmxPMdBqmU" title="Animation vs. Coding" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>></iframe>
       </section>
       <section> 
          <iframe  width="100%" height="300px" src="https://rutube.fandom.com/ru/wiki/Alan_Becker" frameborder="0"></iframe>
       </section> 
       <section>
-         <audio src=""></audio>
+         <audio src="mmdance_-_prikolnaya-betmen.mp3" controls></audio>
+      </section>
+      <section>
+         <video controls width="100%" autoplay loop muted> 
+            <source src="Gold22.mp4" type="video/mp4">
+         </video>
       </section>
    </main>
    <aside>
