--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
    <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="site.css">
+   <link rel="icon" href="stickman.png">
   <title>DragonGold</title>
 </head>
 <body>
@@ -14,29 +15,30 @@
   </header>
    <nav>
       <h2> Меню </h2>
-      <a href="https://dragongold2002.github.io/Index/" class="mybutton">Quest</a>  
-      <a href="https://dragongold2002.github.io/Apple/" class="mybutton">Aplle</a>  
-      <a href="https://dragongold2002.github.io/Dragon-element/" class="mybutton">Dragon-element</a>  
-      <a href="https://dragongold2002.github.io/Site/" class="mybutton">Gausa</a>  
-      <a href="#" class="mybutton">Button</a>  
+      <a href="#text" class="mybutton">Text</a> 
+      <a href="#youtube" class="mybutton">Youtube</a> 
+      <a href="#wiki" class="mybutton">Wiki Alan Becker</a> 
+      <a href="#audio" class="mybutton">Audio</a> 
+      <a href="#video" class="mybutton">Video</a> 
+      <a href="#contects" class="mybutton">Contects</a> 
    </nav>
    <main>
       <h2> Основний контент</h2>
-      <section>
+      <section id="text">
          <article>lower ork2 krjvjeoel kekckekc </article>
          <article>lower ork2 krjvjeoel kekckekc </article>
          <article>lower ork2 krjvjeoel kekckekc </article>
       </section>  
-      <section>
+      <section id="youtube">
          <iframe width="100%" height="480" <iframe width="880" height="495" src="https://www.youtube.com/embed/EFmxPMdBqmU" title="Animation vs. Coding" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>></iframe>
       </section>
-      <section> 
+      <section id="wiki"> 
          <iframe  width="100%" height="300px" src="https://rutube.fandom.com/ru/wiki/Alan_Becker" frameborder="0"></iframe>
       </section> 
-      <section>
+      <section id="audio">
          <audio src="mmdance_-_prikolnaya-betmen.mp3" controls></audio>
       </section>
-      <section>
+      <section id="video">
          <video controls width="100%" autoplay loop muted> 
             <source src="Gold22.mp4" type="video/mp4">
          </video>
@@ -44,14 +46,24 @@
    </main>
    <aside>
       <h2> Мої роботи</h2>
-       <a href="#" class="mybutton">Button</a>  
-      <a href="#" class="mybutton">Button</a>  
-      <a href="#" class="mybutton">Button</a>  
-      <a href="#" class="mybutton">Button</a>  
+       <a href="https://dragongold2002.github.io/Index/" class="mybutton" target="_blank">Quest</a>  
+      <a href="https://dragongold2002.github.io/Apple/" class="mybutton" target="_blank">Aplle</a>  
+      <a href="https://dragongold2002.github.io/Site/" class="mybutton" target="_blank">Gausa</a>  
+      <a href="https://dragongold2002.github.io/Dragon-element/" class="mybutton" target="_blank">Dragon-element</a>  
       <a href="#" class="mybutton">Button</a> 
    </aside>
-   <footer>
+   <footer id="contects">
       <h2>Мої контакти</h2>
+      <div class="mc">
+         <address >
+            <a href="tel:380731010000">+380-73-101-00-00</a> <br>
+         </address>
+      </div>
+       <div class="mc"></div>
+       <div class="mc"></div>
+       <div class="mc"></div>
+       <div class="mc"></div>
+      
    </footer>
 </body>
 </html>
