--- a/index.html
+++ b/index.html
@@ -23,11 +23,25 @@
       <a href="#contects" class="mybutton">Contects</a> 
    </nav>
    <main>
-      <h2> Основний контент</h2>
+      <h2> Основний контент по JavaScript</h2>
       <section id="text">
-         <article>lower ork2 krjvjeoel kekckekc </article>
-         <article>lower ork2 krjvjeoel kekckekc </article>
-         <article>lower ork2 krjvjeoel kekckekc </article>
+         <article>JavaScript (JS) — динамічна, об'єктно-орієнтована прототипна
+            мова програмування. Реалізація стандарту ECMAScript.
+            Найчастіше використовується для створення сценаріїв вебсторінок, 
+            що надає можливість на боці клієнта (пристрої кінцевого користувача) 
+            взаємодіяти з користувачем, керувати браузером, асинхронно обмінюватися 
+            даними з сервером, змінювати структуру та зовнішній вигляд вебсторінки.
+         </article>
+         <article>JavaScript класифікують як прототипну (підмножина об'єктно-орієнтованої), 
+            скриптову мову програмування з динамічною типізацією. Окрім прототипної, JavaScript 
+            також частково підтримує інші парадигми програмування (імперативну та частково функційну) 
+            і деякі відповідні архітектурні властивості, зокрема: динамічна та слабка типізація, 
+            автоматичне керування пам'яттю, прототипне наслідування, функції як об'єкти першого класу. 
+         </article>
+         <article>При використанні в рамках технології DHTML JavaScript код включається в HTML-код 
+            сторінки і виконується інтерпретатором, вбудованим в браузер. Код JavaScript вставляється 
+            в теги &lt;script&gt;&lt;/script&gt; , хоча в більшості браузерів мова сценаріїв за умовчанням саме JavaScript. 
+         </article>
       </section>  
       <section id="youtube">
          <iframe width="100%" height="480" <iframe width="880" height="495" src="https://www.youtube.com/embed/EFmxPMdBqmU" title="Animation vs. Coding" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>></iframe>
