--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section> 
      <section id="imagewiki">     
 <div class="container">
-  <img class="stick" src="stickman2.jpg" alt="Workplace" usemap="#stick">
+  <img class="stick" src="Stickman2.jpg" alt="Workplace" usemap="#stick">
 
 <map name="stick">
   <area shape="rect" coords="178,131,208,229" alt="green" href="https://animator-vs-animation.fandom.com/ru/wiki/%D0%97%D0%B5%D0%BB%D1%91%D0%BD%D1%8B%D0%B9">
